@@ -33,10 +33,8 @@ DEFINES += -DCONTINUATIONS -D__ELF__ -Di386 $(DEFS-$(systype))
 # Arrange for a suitable load address.
 LDFLAGS-kernel += -Ttext 100000
 
-# `boothdr.o' has to be at the beginning.
-kernel-objfiles-prepend = $(systype)/boothdr.o
-
-kernel.o: $(kernel-objfiles-prepend)
+# `boothdr.o' has to be at the beginning of the kernel image.
+$(systype)-objfiles-prepend = boothdr.o
 
 
 #
